# cpp-class

./: Cargo.toml  LICENSE
examples/: non_virt.rs  virt.rs
macros/: Cargo.toml
macros/src/: expand.rs  lib.rs  parse.rs
macros/src/items/: mod.rs  non_virt.rs  virt.rs
src/: inheritance.rs  lib.rs  non_virt.rs  usage.rs
src/macros/: cc.rs  mod.rs  virtual_call.rs  virtual_fn.rs
src/virt/: mod.rs  vtable_ptr.rs
